Wed Dec  7 00:07:46 1994    <tytso@rsx-11.mit.edu>

	* dumpv4.c (v4_print_time): gmtime expects a pointer to a time_t,
		not a long. On most systems these are the same, on
		others.... 

Wed Nov 16 01:03:42 1994  Mark Eichin  (eichin@cygnus.com)

	* dumpv4.c: new file. New command dump_v4db which creates a v4
	slave dump out of a v5 database, leaving out any keys which aren't
	using v4 salt, and any keys that aren't for the current
	realm. Reencrypts using v4 master key, synthesizes arbitrary
	master key version number.
	* configure.in: use WITH_KRB4 for dump support.
	* kdb5_ed_ct.ct: add new dump_v4 command.
	* Makefile.in: link in dumpv4.

Fri Oct 14 23:31:49 1994  Theodore Y. Ts'o  (tytso@dcl)

	* dump.c (load_db): When scanning a database entry, read
		fail_auth_count into a temporary integer variable, and
		then copy that into entry.fail_auth_count, which is a
		char.  

Fri Oct  7 00:01:40 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb5_edit.c (kdb5_edit_Init): Don't let errors in
		set_dbname_help initially cause the exit status to be set.
		Commands like load_db don't need a valid database to be
		opened.

	* ss_wrapper.c (main): Clear code before ss_execute_line, since
		ss_execute_line doesn't set code to 0 if there are no
	problems. 

	* kdb5_edit.c (kdb5_edit_Init): Add a new option so that the
		master key password can be entered on the command line ---
		for testing only; not documented!!

Mon Oct  3 19:10:47 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 15:52:22 1994  Theodore Y. Ts'o  (tytso@dcl)

	* dump.c (update_ok_file): Make sure mod time on the dump_ok file
		is updated.  (Some systems don't update the mod-time when
		a file is opened for writing.)

	* Makefile.in: Relink executable when libraries change.

	* kdb5_edit.c (show_principal): Pass variable with correct type to
		ctime().

	* tcl_wrapper.c (doquit):
	  ss_wrapper.c (main):
	  kdb5_edit.c: