@@ -24,6 +24,8 @@
  * Dump a KDC database into a V4 slave dump.
  */
 
+#ifdef KRB4
+
 #include <des.h>
 #include <krb.h>
 #include <krb_db.h>
@@ -364,3 +366,12 @@ handle_one_key(arg, v5master, v5key, v4key)
 
     return 0;
 }
+
+#else /* KRB4 */
+void dump_v4db(argc, argv)
+	int	argc;
+	char	**argv;
+{
+	printf("This version of krb5_edit does not support the V4 dump command.\n");
+}
+#endif /* KRB4 */
